# FINKI

./: .gitignore  README.md
OOP/: CMakeLists.txt
OOP/OOP aud/: 1.1.cpp  1.2.cpp  1.3.cpp  1.4.cpp  2.1.cpp  2.2.cpp  2.3.cpp  aud3.1.cpp  aud3.2.cpp  aud4.2.cpp  aud4.3.cpp  aud5.1.cpp  aud5.2.cpp  aud6.1.cpp  aud6.2.cpp  aud7.1.cpp  aud7.2.cpp  aud8-1.cpp  aud8.2.cpp
OOP/exercises before 2nd sem/: 1.cpp  arrayOfSubjects.cpp  constructors.cpp  initializerList.cpp
OOP/firstMidtermExercises/: fm1.cpp  fm10.cpp  fm11.cpp  fm12.cpp  fm13.cpp  fm17.cpp  fm2.cpp  fm3.cpp  fm4.cpp  fm5.cpp  fm6.cpp  fm7.cpp  fm8.cpp  fm9.cpp  fmExampleQual.cpp  fmQualGroup1.cpp
OOP/firstMidtermExercises/mkExercises/: fmMK1.cpp  fmMK2.cpp
OOP/lab4/: lab4.1.cpp  lab4.2.cpp  lab4.3.cpp  lab4.4.cpp
OOP/oldLabs6/: ol6.1.cpp  ol6.2.cpp  ol6.3.cpp  ol6.4.cpp  ol6.5.cpp
OOP/ooaid examples into code/: differentPizzas.cpp  pizza.cpp  pizzeria.cpp
OOP/secondMidtermExercises/: sm21.cpp  sm24.cpp  sm25.cpp
SP/: CMakeLists.txt  test.cpp  test2.cpp  test3.cpp
SP/array_exercises/: belowmaindiagaboveseconddiag.cpp  letterOccurrence.cpp  printalldiag.cpp  replacelastelemwithmax.cpp  shiftArr.cpp  shiftArrAgain.cpp  shiftArrByOne.cpp  subarray.cpp  toeplitz.cpp
SP/aud5/: task6.cpp
SP/aud6/: task4.cpp  task5.cpp  task6.cpp
SP/char array exercises/: removeSpecial.cpp  substring.cpp
SP/even more second midterm exercises/: 1.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp
SP/lab9/: 1.cpp  2.cpp  3.1.cpp  3.cpp
SP/midterm exercises/: midterm12.cpp  midterm2.cpp  midterm3.cpp  midterm4.cpp  midterm5.cpp  midterm6.cpp  midterm8.cpp
SP/old exercises/: group1.1.cpp  group1.2.cpp  lab2.1.cpp  lab2.2.cpp  lab2.3.cpp  lab3.1.cpp  lab3.2.cpp  lab3.3.cpp  lastmidterm2.cpp  lastmidterm4.cpp  midterm1.cpp  midterm10.cpp  midterm11.cpp  midterm13.cpp  midterm2.cpp  midterm7.cpp  midterm9.cpp  mkmidterm1.cpp  mkmidterm10.cpp  mkmidterm11.cpp  mkmidterm12.cpp  mkmidterm2.c  mkmidterm3.cpp  mkmidterm4.cpp  mkmidterm5.cpp  mkmidterm6.cpp  mkmidterm7.cpp  mkmidterm8.cpp  mkmidterm9.cpp
SP/pointer exercises/: pointerArray.cpp  references.cpp
SP/ptrLabs/: arrMinMaxSum.cpp  scalingGrades.cpp  sort.cpp
SP/recursion exercises/: EvenOddSumRecursion.cpp  recursion1.cpp  recursion2.cpp  recursion3.cpp  recursion4.cpp  recursion5.cpp  recursion6.cpp  testrec.cpp  triangleRec.cpp
SP/second midterm exercises EN/: 1.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  17.cpp  18.cpp  19.cpp  2.cpp  20.cpp  21.cpp  22.cpp  23.cpp  24.cpp  25.cpp  26.cpp  27.cpp  28.cpp  29.cpp  3.cpp  30.cpp  31.cpp  32.cpp  33.cpp  34.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp  test4.cpp
SP/second midterm exercises MK/: 1.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  17.cpp  18.cpp  19.cpp  2.cpp  20.cpp  21.cpp  3.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp
SP/second midterm group 1/: 1.cpp  2.cpp  3.cpp  README.md
Web Design/: index.html  lab1.html  lab1GroupB.html  selectorPractice.html
Web Design/lab2GroupA/: lab2GroupA.html
Web Design/lab2GroupB/: lab2GroupB.html
Web Design/lab3GroupA/: catalog.html  entry.html  lab3GroupA.html  navCSS.css  review.html
Web Design/lab3GroupB/: divers.html  expeditions.html  home.html  navCSS.css
Web Design/lab4GroupA/: lab4.html
Web Design/lab5GroupA/: index2.html
Web Design/lab5GroupA/css/: style.css  style2.css
