cmake_minimum_required(VERSION 4.0)
project(OOP)

set(CMAKE_CXX_STANDARD 20)

add_executable(beforeSem1 "exercises before 2nd sem/1.cpp")
add_executable(beforeSem2 "exercises before 2nd sem/constructors.cpp")
add_executable(beforeSem3 "exercises before 2nd sem/initializerList.cpp")
add_executable(beforeSem4 "exercises before 2nd sem/arrayOfSubjects.cpp")
add_executable(pizza "ooaid examples into code/pizza.cpp")
add_executable(pizzeria "ooaid examples into code/pizzeria.cpp")
add_executable(differentPizzas "ooaid examples into code/differentPizzas.cpp")
add_executable(aud1.1 "OOP aud/1.1.cpp")
add_executable(aud1.2 "OOP aud/1.2.cpp")
add_executable(1.3 "OOP aud/1.3.cpp")
add_executable(1.4 "OOP aud/1.4.cpp")
add_executable(2.1 "OOP aud/2.1.cpp")
add_executable(2.2 "OOP aud/2.2.cpp")
add_executable(2.3 "OOP aud/2.3.cpp")
add_executable(aud3.1 "OOP aud/aud3.1.cpp")
add_executable(aud3.2 "OOP aud/aud3.2.cpp")
add_executable(aud4.2 "OOP aud/aud4.2.cpp")
add_executable(aud4.3 "OOP aud/aud4.3.cpp")
add_executable(aud5.1 "OOP aud/aud5.1.cpp")
add_executable(aud5.2 "OOP aud/aud5.2.cpp")
add_executable(fm1 firstMidtermExercises/fm1.cpp)
add_executable(fm2 firstMidtermExercises/fm2.cpp)
add_executable(fm3 firstMidtermExercises/fm3.cpp)
add_executable(fm4 firstMidtermExercises/fm4.cpp)
