cmake_minimum_required(VERSION 4.0)
project(OOP)

set(CMAKE_CXX_STANDARD 20)

add_executable(beforeSem1 "exercises before 2nd sem/1.cpp")
add_executable(beforeSem2 "exercises before 2nd sem/constructors.cpp")
add_executable(beforeSem3 "exercises before 2nd sem/initializerList.cpp")
add_executable(beforeSem4 "exercises before 2nd sem/arrayOfSubjects.cpp")
add_executable(pizza "ooaid examples into code/pizza.cpp")
add_executable(pizzeria "ooaid examples into code/pizzeria.cpp")
add_executable(differentPizzas "ooaid examples into code/differentPizzas.cpp")
add_executable(aud1.1 "OOP aud/1.1.cpp")
add_executable(aud1.2 "OOP aud/1.2.cpp")
add_executable(1.3 "OOP aud/1.3.cpp")
add_executable(1.4 "OOP aud/1.4.cpp")
add_executable(2.1 "OOP aud/2.1.cpp")
add_executable(2.2 "OOP aud/2.2.cpp")
add_executable(2.3 "OOP aud/2.3.cpp")
add_executable(aud3.1 "OOP aud/aud3.1.cpp")
add_executable(aud3.2 "OOP aud/aud3.2.cpp")
add_executable(aud4.2 "OOP aud/aud4.2.cpp")
add_executable(aud4.3 "OOP aud/aud4.3.cpp")
add_executable(aud5.1 "OOP aud/aud5.1.cpp")
add_executable(aud5.2 "OOP aud/aud5.2.cpp")
add_executable(fm1 firstMidtermExercises/fm1.cpp)
add_executable(fm2 firstMidtermExercises/fm2.cpp)
add_executable(fm3 firstMidtermExercises/fm3.cpp)
add_executable(fm4 firstMidtermExercises/fm4.cpp)
add_executable(fm5 firstMidtermExercises/fm5.cpp)
add_executable(fm6 firstMidtermExercises/fm6.cpp)
add_executable(fm7 firstMidtermExercises/fm7.cpp)
add_executable(fm8 firstMidtermExercises/fm8.cpp)
add_executable(fm9 firstMidtermExercises/fm9.cpp)
add_executable(fm10 firstMidtermExercises/fm10.cpp)
add_executable(fmMK1 firstMidtermExercises/mkExercises/fmMK1.cpp)
add_executable(fmMK2 firstMidtermExercises/mkExercises/fmMK2.cpp)
add_executable(lab4.1 lab4/lab4.1.cpp)
add_executable(lab4.2 lab4/lab4.2.cpp)
add_executable(lab4.3 lab4/lab4.3.cpp)
add_executable(lab4.4 lab4/lab4.4.cpp)
add_executable(fm11 firstMidtermExercises/fm11.cpp)
add_executable(fm12 firstMidtermExercises/fm12.cpp)
add_executable(fm13 firstMidtermExercises/fm13.cpp)
add_executable(fm17 firstMidtermExercises/fm17.cpp)
add_executable(fmExampleQual firstMidtermExercises/fmExampleQual.cpp)
add_executable(fmQualGroup1 firstMidtermExercises/fmQualGroup1.cpp)
add_executable(aud6.1 "OOP aud/aud6.1.cpp")
add_executable(aud6.2 "OOP aud/aud6.2.cpp")
add_executable(ol6.1 oldLabs6/ol6.1.cpp)
add_executable(ol6.2 oldLabs6/ol6.2.cpp)
add_executable(ol6.3 oldLabs6/ol6.3.cpp)
add_executable(ol6.4 oldLabs6/ol6.4.cpp)
add_executable(ol6.5 oldLabs6/ol6.5.cpp)
add_executable(sm21 secondMidtermExercises/sm21.cpp)
add_executable(sm24 secondMidtermExercises/sm24.cpp)
add_executable(sm25 secondMidtermExercises/sm25.cpp)
add_executable(aud7.1 "OOP aud/aud7.1.cpp")
add_executable(aud7.2 "OOP aud/aud7.2.cpp")
