cmake_minimum_required(VERSION 4.0)
project(untitled)

set(CMAKE_CXX_STANDARD 20)

add_executable(task6 aud5/task6.cpp)
add_executable(lab1 "old exercises/lab2.1.cpp")
add_executable(lab2 "old exercises/lab2.2.cpp")
add_executable(lab3 "old exercises/lab2.3.cpp")
add_executable(midterm1 "old exercises/midterm1.cpp")
add_executable(midterm2 "old exercises/midterm2.cpp")
add_executable(midterm3 "old exercises/midterm3.cpp")
add_executable(midterm4 "old exercises/midterm4.cpp")
add_executable(midterm5 "old exercises/midterm5.cpp")
add_executable(midterm6 "old exercises/midterm6.cpp")
add_executable(midterm7 "old exercises/midterm7.cpp")
add_executable(midterm8 "old exercises/midterm8.cpp")
add_executable(midterm9 "old exercises/midterm9.cpp")
add_executable(midterm10 "old exercises/midterm10.cpp")
add_executable(midterm11 "old exercises/midterm11.cpp")
add_executable(midterm12 "old exercises/midterm12.cpp")
add_executable(midterm13 "old exercises/midterm13.cpp")
add_executable(task4 aud6/task4.cpp)
add_executable(task5 aud6/task5.cpp)
add_executable(task6.0 aud6/task6.cpp)
add_executable(test test.cpp)
add_executable(lab3.1 "old exercises/lab3.1.cpp")
add_executable(lab3.2 "old exercises/lab3.2.cpp")
add_executable(lab3.3 "old exercises/lab3.3.cpp")
add_executable(mkmidterm1 "old exercises/mkmidterm1.cpp")
add_executable(mkmidterm3 "old exercises/mkmidterm3.cpp")
add_executable(mkmidterm2 "old exercises/mkmidterm2.c")
add_executable(mkmidterm4 "old exercises/mkmidterm4.cpp")
add_executable(mkmidterm5 "old exercises/mkmidterm5.cpp")
add_executable(mkmidterm6 "old exercises/mkmidterm6.cpp")
add_executable(mkmidterm7 "old exercises/mkmidterm7.cpp")
add_executable(mkmidterm8 "old exercises/mkmidterm8.cpp")
add_executable(mkmidterm9 "old exercises/mkmidterm9.cpp")
add_executable(mkmidterm10 "old exercises/mkmidterm10.cpp")
add_executable(mkmidterm11 "old exercises/mkmidterm11.cpp")
add_executable(mkmidterm12 "old exercises/mkmidterm12.cpp")
add_executable(test2 test2.cpp)
add_executable(test3 test3.cpp)
add_executable(lastmidterm2 "old exercises/lastmidterm2.cpp")
add_executable(lastmidterm4 "old exercises/lastmidterm4.cpp")
add_executable(group1.1 "old exercises/group1.1.cpp")
add_executable(group1.2 "old exercises/group1.2.cpp")
add_executable(shiftArr array_exercises/shiftArr.cpp)
add_executable(shiftArrByOne array_exercises/shiftArrByOne.cpp)
add_executable(subarray array_exercises/subarray.cpp)
add_executable(letterOccurrence array_exercises/letterOccurrence.cpp)
add_executable(toeplitz array_exercises/toeplitz.cpp)
add_executable(printalldiag array_exercises/printalldiag.cpp)
add_executable(replacelastelemwithmax array_exercises/replacelastelemwithmax.cpp)
add_executable(belowmaindiagaboveseconddiag array_exercises/belowmaindiagaboveseconddiag.cpp)
add_executable(recursion1 "recursion exercises/recursion1.cpp")
add_executable(recursion2 "recursion exercises/recursion2.cpp")
add_executable(recursion3 "recursion exercises/recursion3.cpp")
add_executable(testrec "recursion exercises/testrec.cpp")
add_executable(recursion4 "recursion exercises/recursion4.cpp")
add_executable(recursion5 "recursion exercises/recursion5.cpp")
add_executable(recursion6 "recursion exercises/recursion6.cpp")
add_executable(references "pointer exercises/references.cpp")
add_executable(pointerArray "pointer exercises/pointerArray.cpp")
add_executable(sort ptrLabs/sort.cpp)
add_executable(arrMinMaxSum ptrLabs/arrMinMaxSum.cpp)
add_executable(scalingGrades ptrLabs/scalingGrades.cpp)
add_executable(substring "char array exercises/substring.cpp")
add_executable(removeSpecial "char array exercises/removeSpecial.cpp")
