cmake_minimum_required(VERSION 4.0)
project(untitled)

set(CMAKE_CXX_STANDARD 20)

add_executable(task6 aud5/task6.cpp)
add_executable(lab1 "old exercises/lab2.1.cpp")
add_executable(lab2 "old exercises/lab2.2.cpp")
add_executable(lab3 "old exercises/lab2.3.cpp")
add_executable(midterm1 "old exercises/midterm1.cpp")
add_executable(midterm2 "old exercises/midterm2.cpp")
add_executable(midterm3 "old exercises/midterm3.cpp")
add_executable(midterm4 "old exercises/midterm4.cpp")
add_executable(midterm5 "old exercises/midterm5.cpp")
add_executable(midterm6 "old exercises/midterm6.cpp")
add_executable(midterm7 "old exercises/midterm7.cpp")
add_executable(midterm8 "old exercises/midterm8.cpp")
add_executable(midterm9 "old exercises/midterm9.cpp")
add_executable(midterm10 "old exercises/midterm10.cpp")
add_executable(midterm11 "old exercises/midterm11.cpp")
add_executable(midterm12 "old exercises/midterm12.cpp")
add_executable(midterm13 "old exercises/midterm13.cpp")
add_executable(task4 aud6/task4.cpp)
add_executable(task5 aud6/task5.cpp)
add_executable(task6.0 aud6/task6.cpp)
add_executable(test test.cpp)
add_executable(lab3.1 "old exercises/lab3.1.cpp")
add_executable(lab3.2 "old exercises/lab3.2.cpp")
add_executable(lab3.3 "old exercises/lab3.3.cpp")
add_executable(mkmidterm1 "old exercises/mkmidterm1.cpp")
add_executable(mkmidterm3 "old exercises/mkmidterm3.cpp")
add_executable(mkmidterm2 "old exercises/mkmidterm2.c")
add_executable(mkmidterm4 "old exercises/mkmidterm4.cpp")
add_executable(mkmidterm5 "old exercises/mkmidterm5.cpp")
add_executable(mkmidterm6 "old exercises/mkmidterm6.cpp")
add_executable(mkmidterm7 "old exercises/mkmidterm7.cpp")
add_executable(mkmidterm8 "old exercises/mkmidterm8.cpp")
add_executable(mkmidterm9 "old exercises/mkmidterm9.cpp")
add_executable(mkmidterm10 "old exercises/mkmidterm10.cpp")
add_executable(mkmidterm11 "old exercises/mkmidterm11.cpp")
add_executable(mkmidterm12 "old exercises/mkmidterm12.cpp")
add_executable(test2 test2.cpp)
add_executable(test3 test3.cpp)
add_executable(lastmidterm2 "old exercises/lastmidterm2.cpp")
add_executable(lastmidterm4 "old exercises/lastmidterm4.cpp")
add_executable(group1.1 "old exercises/group1.1.cpp")
add_executable(group1.2 "old exercises/group1.2.cpp")
add_executable(shiftArr array_exercises/shiftArr.cpp)
add_executable(shiftArrByOne array_exercises/shiftArrByOne.cpp)
add_executable(subarray array_exercises/subarray.cpp)
add_executable(letterOccurrence array_exercises/letterOccurrence.cpp)
add_executable(toeplitz array_exercises/toeplitz.cpp)
add_executable(printalldiag array_exercises/printalldiag.cpp)
add_executable(replacelastelemwithmax array_exercises/replacelastelemwithmax.cpp)
add_executable(belowmaindiagaboveseconddiag array_exercises/belowmaindiagaboveseconddiag.cpp)
add_executable(recursion1 "recursion exercises/recursion1.cpp")
add_executable(recursion2 "recursion exercises/recursion2.cpp")
add_executable(recursion3 "recursion exercises/recursion3.cpp")
add_executable(testrec "recursion exercises/testrec.cpp")
add_executable(recursion4 "recursion exercises/recursion4.cpp")
add_executable(recursion5 "recursion exercises/recursion5.cpp")
add_executable(recursion6 "recursion exercises/recursion6.cpp")
add_executable(references "pointer exercises/references.cpp")
add_executable(pointerArray "pointer exercises/pointerArray.cpp")
add_executable(sort ptrLabs/sort.cpp)
add_executable(arrMinMaxSum ptrLabs/arrMinMaxSum.cpp)
add_executable(scalingGrades ptrLabs/scalingGrades.cpp)
add_executable(substring "char array exercises/substring.cpp")
add_executable(removeSpecial "char array exercises/removeSpecial.cpp")
add_executable(1 lab9/1.cpp)
add_executable(2 lab9/2.cpp)
add_executable(3 lab9/3.cpp)
add_executable(3.1 lab9/3.1.cpp)
add_executable(sM1 "second midterm exercises EN/1.cpp")
add_executable(sM2 "second midterm exercises EN/2.cpp")
add_executable(sM3 "second midterm exercises EN/3.cpp")
add_executable(sM4 "second midterm exercises EN/4.cpp")
add_executable(sM5 "second midterm exercises EN/5.cpp")
add_executable(sM6 "second midterm exercises EN/6.cpp")
add_executable(sM7 "second midterm exercises EN/7.cpp")
add_executable(sM8 "second midterm exercises EN/8.cpp")
add_executable(sM9 "second midterm exercises EN/9.cpp")
add_executable(sM10 "second midterm exercises EN/10.cpp")
add_executable(sM11 "second midterm exercises EN/11.cpp")

add_executable(sM12 "second midterm exercises EN/12.cpp")
add_executable(sM13 "second midterm exercises EN/13.cpp")
add_executable(sM14 "second midterm exercises EN/14.cpp")
add_executable(sM15 "second midterm exercises EN/15.cpp")
add_executable(sM16 "second midterm exercises EN/16.cpp")
add_executable(sM17 "second midterm exercises EN/17.cpp")
add_executable(sM18 "second midterm exercises EN/18.cpp")
add_executable(sM19 "second midterm exercises EN/19.cpp")
add_executable(sM20 "second midterm exercises EN/20.cpp")
add_executable(sM21 "second midterm exercises EN/21.cpp")
add_executable(sM22 "second midterm exercises EN/22.cpp")
add_executable(sM23 "second midterm exercises EN/23.cpp")
add_executable(sM24 "second midterm exercises EN/24.cpp")
add_executable(sM25 "second midterm exercises EN/25.cpp")
add_executable(EvenOddSumRecursion "recursion exercises/EvenOddSumRecursion.cpp")
add_executable(sM26 "second midterm exercises EN/26.cpp")
add_executable(sM27 "second midterm exercises EN/27.cpp")
add_executable(sM28 "second midterm exercises EN/28.cpp")
add_executable(sM29 "second midterm exercises EN/29.cpp")
add_executable(sM30 "second midterm exercises EN/30.cpp")
add_executable(sM31 "second midterm exercises EN/31.cpp")
add_executable(sM32 "second midterm exercises EN/32.cpp")
add_executable(sM33 "second midterm exercises EN/33.cpp")
add_executable(sM34 "second midterm exercises EN/34.cpp")
add_executable(sMM1 "second midterm exercises MK/1.cpp")
add_executable(sMM2 "second midterm exercises MK/2.cpp")
add_executable(sMM3 "second midterm exercises MK/3.cpp")
add_executable(sMM5 "second midterm exercises MK/5.cpp")
add_executable(sMM6 "second midterm exercises MK/6.cpp")
add_executable(triangleRec "recursion exercises/triangleRec.cpp")
add_executable(sMM7 "second midterm exercises MK/7.cpp")
add_executable(sMM8 "second midterm exercises MK/8.cpp")
add_executable(sMM9 "second midterm exercises MK/9.cpp")
add_executable(sMM10 "second midterm exercises MK/10.cpp")
add_executable(sMM11 "second midterm exercises MK/11.cpp")
add_executable(sMM12 "second midterm exercises MK/12.cpp")
add_executable(sMM13 "second midterm exercises MK/13.cpp")
add_executable(sMM14 "second midterm exercises MK/14.cpp")
add_executable(sMM15 "second midterm exercises MK/15.cpp")
add_executable(sMM16 "second midterm exercises MK/16.cpp")
add_executable(sMM17 "second midterm exercises MK/17.cpp")
add_executable(sMM18 "second midterm exercises MK/18.cpp")
add_executable(sMM19 "second midterm exercises MK/19.cpp")
add_executable(sMM20 "second midterm exercises MK/20.cpp")
add_executable(sMM21 "second midterm exercises MK/21.cpp")
add_executable(secondMidterm1 "even more second midterm exercises/1.cpp")
add_executable(secondMidterm2 "even more second midterm exercises/2.cpp")
add_executable(secondMidterm3 "even more second midterm exercises/3.cpp")
add_executable(secondMidterm4 "even more second midterm exercises/4.cpp")
add_executable(secondMidterm5 "even more second midterm exercises/5.cpp")
add_executable(secondMidterm6 "even more second midterm exercises/6.cpp")
add_executable(secondMidterm7 "even more second midterm exercises/7.cpp")
add_executable(secondMidterm8 "even more second midterm exercises/8.cpp")
add_executable(secondMidterm9 "even more second midterm exercises/9.cpp")
add_executable(secondMidterm10 "even more second midterm exercises/10.cpp")
add_executable(secondMidterm11 "even more second midterm exercises/11.cpp")
add_executable(secondMidterm12 "even more second midterm exercises/12.cpp")
add_executable(secondMidterm13 "even more second midterm exercises/13.cpp")
add_executable(secondMidterm14 "even more second midterm exercises/14.cpp")
add_executable(shiftArrAgain array_exercises/shiftArrAgain.cpp)
